--- a/README.Rmd
+++ b/README.Rmd
@@ -8,6 +8,7 @@ output: rmarkdown::github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,
                       warning = FALSE,
+                      message = FALSE,
                       fig.path = "plots/MgR-",
                       fig.height = 5.5,
                       fig.width = 13,
